renderer/active.css
/* BASE CSS */
*,
*::before,
*::after {
	box-sizing: inherit;
	margin: 0;
	padding: 0;
}

html {
	font-size: 62.5%;
}

body {
	box-sizing: border-box;
	padding: 0rem;
}

/* TYPOGRAPHY */

body {
	font-family: 'Lato', sans-serif;
	letter-spacing: 1.4;
	word-spacing: 2.5;
	line-height: 1.7;
	text-align: center;
	color: white;
	background-color: black;
}

.center-div {
	position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

/* SECTIONS */

.wrapper {
	height: 100%;
	display: grid;
	grid-template-columns: 10rem 1fr 10rem;
	grid-template-rows: 3fr 2fr 55% 3fr;
	grid-gap: 1rem;
	padding: 3rem 0;
	position: relative;
}

.wrapper > div,
.dashboard > div {
	/* border: 3px solid grey; */
}

.dashboard {
	grid-row: 1/2;
	grid-column: 2/3;
	display: grid;
	grid-template-columns: 1fr 50% 1fr;
	grid-template-rows: 100%;
	grid-gap: 1rem;
	position: relative;
}

.dialog {
	grid-column: 2/3;
	grid-row: 2/3;
	position: relative;
    overflow: hidden;
}

.dialog img {
    position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
        display: block;
        max-width: 100%;
        height: auto;
}

.content {
	grid-column: 2/3;
	grid-row: 3/4;
	position: relative;
}

.content > div {
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
}

.announcements {
	grid-column: 2/3;
	grid-row: 4/5;
	display: grid;
	grid-template-rows: 1fr 1fr;
	padding: 1rem;
}

/* -- MODULES -- */

/* USER */

.user {
	grid-column: 1/2;
	grid-row: 1/2;
	font-size: 1.6rem;
	line-height: 1.5;
	position: relative;
}

.user img {
	max-width: 50%;
	max-height: 50%;
	margin: 1rem;
}

/* DATE & TIME */

.date-time {
	grid-column: 2/3;
	grid-row: 1/2;
	font-weight: 700;
}

.date-time .clock {
	font-size: 8rem;
	line-height: .95;
	display: grid;
	grid-template-columns: 1fr auto 1fr;
}

.date-time .clock .hour {
	grid-column: 1/2;
	text-align: right;
}

.date-time .clock .colon {
	grid-column: 2/3;
	animation: blink 2s steps(3, start) infinite;
}

.date-time .clock .minutes {
	text-align: left;
}

.date-time .date {
	font-size: 2.6rem;
}

/* TOP-RIGHT WEATHER */

.weather {
	grid-column: 3/4;
	grid-row: 1/2;
	position: relative;
}


.weather .weather-corner {
	font-size: 2rem;
}

.weather .weather-corner img {
	margin: 1rem;
	height: 10rem;
}

/* HELPER PROMPT
.dialog {
	transition: all 1s;
}

.dialog .prompt {
	position: relative;

	animation: zoomTowards 1s cubic-bezier(0.19, 1, 0.22, 1);
}

.prompt .prompt__text {
	width: 80%;
	font-size: 1.5vh;
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
} */

/* CONTENT WEATHER */

.weather-wrapper {
	font-size: 6.5rem;
	font-weight: 600;
}

.weather-wrapper > div img {
	margin: 3rem;
	height: 36rem;
}

/* FORECAST */

.forecast-wrapper {
	display: grid;
	grid-template-rows: 10% repeat(5, 1fr);
	grid-template-columns: 1fr 50rem 1fr;
	grid-gap: 1rem;
	transition: all .4s;
	text-align: center;
}

.forecast-wrapper > div {
	grid-column: 2/3;
}

#fore_location {
	font-size: 3rem;
	grid-row: 1/2;
	text-align: center;
}

.forecast-wrapper .daycast {
	width: 50rem;
	display: grid;
	grid-template-columns: repeat(3, 1fr);
	grid-template-rows: 100%;
	margin: 2rem 0;
}

.forecast-wrapper .daycast > div {
	padding: 0 1rem;
}

.forecast-wrapper .daycast--0 {
	grid-row: 2/3;
}

.forecast-wrapper .daycast--1 {
	grid-row: 3/4;
}

.forecast-wrapper .daycast--2 {
	grid-row: 4/5;
}

.forecast-wrapper .daycast--3 {
	grid-row: 5/6;
}

.forecast-wrapper .daycast--4 {
	grid-row: 6/6;
}

.forecast-wrapper .daycast .fore_day,
.forecast-wrapper .daycast .fore_temp {
	position: relative;
	font-size: 4rem;
}

.forecast-wrapper .daycast .fore_day > p,
.forecast-wrapper .daycast .fore_temp > p{
	position: absolute;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -50%);
}

.forecast-wrapper .daycast .fore_img img {
	height: 10rem;
}

.daycast--0,
.daycast--2,
.daycast--4 {
	animation: moveInRight 1s cubic-bezier(0.19, 1, 0.22, 1);
}

.daycast--1,
.daycast--3 {
	animation: moveInLeft 1s cubic-bezier(0.19, 1, 0.22, 1);
}

/* LOCAL TIME */

.locale {
	font-size: 4rem;
	line-height: 1;
	min-width: 50rem;
}

.locale .clock {
	font-size: 12rem;
	line-height: .95;
	display: grid;
	grid-template-columns: 1fr auto 1fr;
	margin: 3rem 0;
}

.locale .clock .hour {
	grid-column: 1/2;
	text-align: right;
}

.locale .clock .colon {
	grid-column: 2/3;
	animation: blink 2s steps(3, start) infinite;
}

.locale .clock .minutes {
	text-align: left;
}

/* CANTINA */

.cantina-wrapper {
	font-size: 1.8rem;
}

.cantina-wrapper .spacing {
	height: 2.5rem;
}

.cantina-wrapper .meal {
	text-transform: uppercase;

}

.cantina-wrapper .cantina-hours {
	font-style: italic;
}

.cantina-wrapper .cafe {
	text-transform: capitalize;
	text-decoration: underline;
}

#cantina-greet {
	font-size: 2.8rem;
	text-decoration: underline;
	text-transform: uppercase;
}

/* HELP WITH COMMANDS */
.help-wrapper {
	width: 80rem;
	font-size: 2rem;
}

.help-wrapper ul {
	padding-top: 2rem;
	list-style: none;
}


/* AUTHORS */

.authors-row {
	margin: 0 auto;
	position: relative;
}

.authors-row:first-child {
	margin-bottom: 4rem;
}

.authors-row::after {
	/* creating an pseudo element that is empty */
	content: "";
	/* table */
	display: table;
	/* clears any float elements around it may have */
	clear: both;
}

.authors-row .col-1-of-2 {
	display: inline-block;
	font-size: 1.75rem;
}

.authors-row .col-1-of-2:first-child {
	margin-right: 6rem;
}

.authors-row .col-1-of-2 .pic{
	height: 28rem;
	width: 20rem;
	border: .5rem inset white;
	box-shadow: 0px 0rem 4rem 3px white;
}

.authors-row .col-1-of-2 .label {
	padding-top: 1.5rem;
    line-height: 1.4;
}

.authors-row .col-1-of-2 .shape {
	height: 4.5rem;
	width: 4.5rem;
	float: left;
	clip-path: circle(50% at 50% 50%);
	transform: translate(1.5rem, 1.5rem);
}

.authors-row .col-1-of-2 .shape .flag {
	height: 100%;
}
/* ... */

